# wagtail-modeladmin

./: .coveragerc  .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  readthedocs.yml  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
docs/: Makefile  conf.py  create_edit_delete_views.md  index.md  index.rst  indexview.md  installation.md  migrating.md  primer.md  usage.md
docs/tips_and_tricks/: custom_clean.md  modeladmingroup_extra_views.md  reversing_urls.md
sandbox/: manage.py
sandbox/sandbox/: models.py  urls.py  wagtail_hooks.py  wsgi.py
sandbox/sandbox/migrations/: 0001_initial.py
sandbox/sandbox/settings/: base.py  dev.py  production.py
sandbox/sandbox/templates/: base.html
wagtail_modeladmin/: __init__.py  apps.py  forms.py  options.py  views.py  wagtail_hooks.py
wagtail_modeladmin/helpers/: button.py  permission.py  search.py
wagtail_modeladmin/locale/pt_BR/LC_MESSAGES/: django.po
wagtail_modeladmin/static/wagtail_modeladmin/css/: modeladmin.css
wagtail_modeladmin/static/wagtail_modeladmin/js/: .gitignore  prepopulate.js
wagtail_modeladmin/templates/modeladmin/: create.html  edit.html  index.html  prepopulated_slugs.html
wagtail_modeladmin/templates/modeladmin/includes/: dropdown_button.html  export_buttons.html  header.html  header_with_history.html  result_list.html  search_form.html
wagtail_modeladmin/templatetags/: modeladmin_tags.py
wagtail_modeladmin/test/: __init__.py  apps.py  models.py  settings.py  wagtail_hooks.py
wagtail_modeladmin/test/fixtures/: modeladmintest_test.json  test_specific.json
wagtail_modeladmin/test/migrations/: 0001_initial.py  0002_customimage_description_and_more.py
wagtail_modeladmin/test/tests/: test_modeladmin_edit_handlers.py  test_page_modeladmin.py  test_search_handlers.py  test_simple_modeladmin.py
